manifest/mdq/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mdq-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: mdq
  type: ClusterIP
